# laurent

./: .gitignore  CMakeLists.txt
envs/dev/: Dockerfile  run.sh
scripts/: docker.sh  launch.sh
src/: main.cpp
